前后端的身份认证

--- a/TechDoc/身份认证.md
+++ b/TechDoc/身份认证.md
@@ -15,3 +15,15 @@
 ### 缺点
 - 占用服务器资源
 - 不利于前后端厚礼，开发效率低
+
+## 3. 前后端分离的 Web 开发模式
+
+## 4. 前后端分离的优缺点
+### 优点：
+- 开发体验好
+- 用户体验好。Ajax 技术的广泛应用，极大的提高了用户的体验。
+- 减轻了服务器端的渲染压力
+### 缺点
+- 不利于 SEO
+
+## 5. 如何选择 Web 开发模式
