--- a/TechDoc/身份认证.md
+++ b/TechDoc/身份认证.md
@@ -4,7 +4,7 @@
 服务端渲染的概念： 服务器发送给客户端的HTML页面，是再服务器通过字符串的拼接，动态生成的。因此，客户端不需要使用Ajax
 这样的基数额外请求页面的数据。代码如下：
 ```
-
+> This is commit>
 ```
 
 ## 2. 服务端渲染的优缺点
@@ -27,3 +27,16 @@
 - 不利于 SEO
 
 ## 5. 如何选择 Web 开发模式
+
+### 5.3 Session 认证机制
+- HTTP 协议的无状态性
+- 如何突破 HTTP 无状态的限制 （Cookie 身份认证的标识）
+
+#### 什么是Cookie
+Cookie 是存储再用户浏览器中的一段不超过 4kb 的字符串。它由一个名称，一个值和其他几个用于控制Cookie有效期，安全性，
+使用范围的可选属性组成。
+Cookie 的极大特征：
+- 自动发送
+- 域名独立
+- 过期时限
+- 4 kb 限制
