--- a/TechDoc/身份认证.md
+++ b/TechDoc/身份认证.md
@@ -4,7 +4,6 @@
 服务端渲染的概念： 服务器发送给客户端的HTML页面，是再服务器通过字符串的拼接，动态生成的。因此，客户端不需要使用Ajax
 这样的基数额外请求页面的数据。代码如下：
 ```
-> This is commit>
 ```
 
 ## 2. 服务端渲染的优缺点
@@ -35,8 +34,15 @@
 #### 什么是Cookie
 Cookie 是存储再用户浏览器中的一段不超过 4kb 的字符串。它由一个名称，一个值和其他几个用于控制Cookie有效期，安全性，
 使用范围的可选属性组成。
-Cookie 的极大特征：
+Cookie 的几大特征：
 - 自动发送
 - 域名独立
 - 过期时限
 - 4 kb 限制
+
+#### Cookie 在身份认证中的作用
+客户端第一次请求服务器的时候，服务器**通过响应头的形式**，向客户端发送一个身份认证的 Cookie，客户端会自动将 Cookie 保存
+在浏览器中。
+随后，当客户端浏览器每次请求服务器的时候，浏览器会自动将身份认证相关的 Cookie，通过请求头的形式发送给服务器，服务器
+即可严明客户端的身份。
+
