--- a/TechDoc/身份认证.md
+++ b/TechDoc/身份认证.md
@@ -46,3 +46,20 @@ Cookie 的几大特征：
 随后，当客户端浏览器每次请求服务器的时候，浏览器会自动将身份认证相关的 Cookie，通过请求头的形式发送给服务器，服务器
 即可严明客户端的身份。
 
+#### 提高身份认证的安全性
+“会员卡” + "刷卡认证“ 
+
+#### Session 的工作原理
+
+### 5.4 在 Express 中使用 Session 认证
+#### **配置* express-session 中间件
+express-session 中间件安装成功后，需要通过 app.use()来注册 session 中间件，示例代码如下：
+```
+var session = require('express-session')
+//配置Sesison中间件
+app.use(session({
+    secret: 'keyboard cat', //secret 属性的值可以为任意字符串
+    resave: false,	     //固定写法
+    saveUninitialized: true
+}))
+```
