前后端的身份认证

--- a/TechDoc/身份认证.md
+++ b/TechDoc/身份认证.md
@@ -57,9 +57,20 @@ express-session 中间件安装成功后，需要通过 app.use()来注册 sessi
 ```
 var session = require('express-session')
 //配置Sesison中间件
-app.use(session({
-    secret: 'keyboard cat', //secret 属性的值可以为任意字符串
-    resave: false,	     //固定写法
-    saveUninitialized: true
-}))
+const express = require('express')
+const app = express()
+
+// 配置Session中间件
+const session = require('express-session')
+
+app.use(session({secret: 'Troy', resave: false, saveUninitialized: true}))
+
+app.listen(8000, () => {
+    console.log('http://127.0.0.1:8000');
+})
 ```
+
+### 5.5 JWT(JSON web Token 目前最流行的跨域认证解决方案) 认证机制
+注意：
+- 当前端请求后端**不存在跨域问题**的时候，**推荐使用Session**身份认证机制。
+- 当前端需要跨域请求后端接口的时候，不推荐使用 Session 身份认证机制，推荐使用 JWT 认证机制。
