--- a/TechDoc/身份认证.md
+++ b/TechDoc/身份认证.md
@@ -74,3 +74,11 @@ app.listen(8000, () => {
 注意：
 - 当前端请求后端**不存在跨域问题**的时候，**推荐使用Session**身份认证机制。
 - 当前端需要跨域请求后端接口的时候，不推荐使用 Session 身份认证机制，推荐使用 JWT 认证机制。
+
+#### JWT 的组成部分
+JWT 通常由三部分组成，分别是Header（头部），Payload（有效荷载），Signature（签名）。
+三者之间使用英文的 "." 分隔，格式如下：
+```
+Header.Payload.Signature
+```
+
