前后端的身份认证

--- a/TechDoc/身份认证.md
+++ b/TechDoc/身份认证.md
@@ -52,7 +52,7 @@ Cookie 的几大特征：
 #### Session 的工作原理
 
 ### 5.4 在 Express 中使用 Session 认证
-#### **配置* express-session 中间件
+#### **配置** express-session 中间件
 express-session 中间件安装成功后，需要通过 app.use()来注册 session 中间件，示例代码如下：
 ```
 var session = require('express-session')
@@ -81,4 +81,37 @@ JWT 通常由三部分组成，分别是Header（头部），Payload（有效荷
 ```
 Header.Payload.Signature
 ```
+##### JWT 的使用方式
+推荐的做法是**把 JWT 放在 HTTP 请求头的 Authorization 字段中：
+```
+Authorization: Bearer <token>
+```
 
+### 5.6 在 Express 中使用 JWT
+#### 1. 安装两个 JWT 相关的包：
+```
+npm install jsonwebtoken express-jwt
+```
+其中：
+- jsonwebtoken 用于生成 JWT 字符串
+- express-jwt 用于将 JWT 字符串解析还原成 JSON 对象
+
+#### 2. 导入 JWT 相关的包
+使用 require（）函数，分别导入 JWT 相关的两个包：
+```
+const jwt = require('jsonwebtoken')
+const expressJWT = require('express-jwt')
+```
+#### 3. 定义 secret 密钥
+- 当生成 JWT 字符串的时候，需要使用 secret 密钥对用户的信息**进行加密**，最终得到加密好的 JWT 字符串
+- 当把 JWT 字符串解析还原成 JSON 对象的时候，需要使用 secret 密钥**进行解密**
+```
+const secretKey = 'itheima No1 ^-^'
+```
+#### 4. 在登录成功后生成 jwt 字符串
+调用jsonwetoken
+
+#### 5. 将JWT字符串还原为JSON对象
+```
+app.use(expressJWT({secret:secretKey}).unless({path:[/^\/api\//]}))
+```
