--- a/TechDoc/身份认证.md
+++ b/TechDoc/身份认证.md
@@ -115,3 +115,89 @@ const secretKey = 'itheima No1 ^-^'
 ```
 app.use(expressJWT({secret:secretKey}).unless({path:[/^\/api\//]}))
 ```
+
+#### 实例
+```
+const epxress = require('express')
+const app = epxress()
+
+//安装并导入 JWT 相关的两个包
+const jwt = require('jsonwebtoken')
+const expressJWT = require('express-jwt')
+
+const cors = require('cors')
+app.use(cors())
+
+//接卸post表单数据的中间件
+const bodyParser = require('body-parser')
+app.use(bodyParser.urlencoded({extended:false}))
+
+//TODO2: 定义secret密钥，建议将密钥命名为 secretKey
+const secretKey = 'itheima No1 ^_^'
+
+//注册将jwt字符串解析还原成json对象的中间件
+// 只要配置成功了express-jwt这个中间件，就可以把解析出来的用户信息，挂载到req.user
+app.use(expressJWT({secret:secretKey,algorithms:['HS256']}).unless({path:[/^\/api\//]}))
+//登录接口
+app.post('/api/login',(req,res) =>{
+    const userinfo = req.body
+    const tokenStr = jwt.sign({username:userinfo.username},secretKey,{expiresIn:'30s'})
+    //登录失败
+    if(userinfo.username != 'admin' || userinfo.password != '000000'){
+        return res.send({
+            status: 400,
+            message:'登录失败'
+        })
+    }else{
+        return res.send({
+            status:200,
+            message:'登录成功',
+            token:tokenStr
+        })
+    }
+})
+
+app.get('/admin/getinfo',(req,res) =>{
+    //TODO_05: 使用req.user获取用户信息，并使用data属性将用户信息发送给客户端
+    console.log(req.user);
+    res.send({
+        status:200,
+        message:'用户信息获取成功！',
+        data:req.user,
+    })
+})
+
+app.listen(8000,()=>{
+    console.log('http://127.0.0.1:8000');
+})
+```
+package.json
+```
+{
+  "name": "jwt-test",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-jwt": "^6.1.1",
+    "jsonwebtoken": "^8.5.1"
+  }
+}
+```
+Postman
+```
+http://127.0.0.1:8000/api/login
+
+Body中的元素为：
+username: admin
+password: 000000
+```
+截取生成的token，添加一个Get请求，在Header中添加Authorization 元素， Value为Bearer + 截取的token
