--- a/TechDoc/身份认证.md
+++ b/TechDoc/身份认证.md
@@ -201,3 +201,17 @@ username: admin
 password: 000000
 ```
 截取生成的token，添加一个Get请求，在Header中添加Authorization 元素， Value为Bearer + 截取的token
+
+#### 捕获解析 JWT 失败后产生的错误
+当使用express-jwt 解析Token字符串时，如果客户端发送过来的Token字符串过期或不合法，会产生一个解析失败的错误，影响
+项目的正常运行。我们可以通过Express 的错误中间件，捕获这个错误并进行相关的处理。
+```
+app.use((err,req,res,next) =>{
+    // token 解析失败导致的错误
+    if(err.name === 'UnauthorizedError'){
+        return res.send({status:401,message:'无效的token'})
+    }
+    // 其他原因导致的错误
+    res.send({status:500,message:'未知错误'})
+})
+```
