--- a/TechDoc/身份认证.md
+++ b/TechDoc/身份认证.md
@@ -1,13 +1,11 @@
-# 前后端的身份认证
+## 前后端的身份认证
 
-## 1. 服务端渲染的 Web 开发模式
+### 1. 服务端渲染的 Web 开发模式
 服务端渲染的概念： 服务器发送给客户端的HTML页面，是再服务器通过字符串的拼接，动态生成的。因此，客户端不需要使用Ajax
-这样的基数额外请求页面的数据。代码如下：
-```
-```
+这样的基数额外请求页面的数据。
 
-## 2. 服务端渲染的优缺点
-### 优点：
+### 2. 服务端渲染的优缺点
+#### 优点：
 - 前端耗时少
 - 有利于SEO
 
@@ -15,23 +13,23 @@
 - 占用服务器资源
 - 不利于前后端厚礼，开发效率低
 
-## 3. 前后端分离的 Web 开发模式
+### 3. 前后端分离的 Web 开发模式
 
-## 4. 前后端分离的优缺点
-### 优点：
+### 4. 前后端分离的优缺点
+#### 优点：
 - 开发体验好
 - 用户体验好。Ajax 技术的广泛应用，极大的提高了用户的体验。
 - 减轻了服务器端的渲染压力
-### 缺点
+#### 缺点
 - 不利于 SEO
 
-## 5. 如何选择 Web 开发模式
+### 5. 如何选择 Web 开发模式
 
-### 5.3 Session 认证机制
+#### 5.3 Session 认证机制
 - HTTP 协议的无状态性
 - 如何突破 HTTP 无状态的限制 （Cookie 身份认证的标识）
 
-#### 什么是Cookie
+##### 什么是Cookie？
 Cookie 是存储再用户浏览器中的一段不超过 4kb 的字符串。它由一个名称，一个值和其他几个用于控制Cookie有效期，安全性，
 使用范围的可选属性组成。
 Cookie 的几大特征：
@@ -40,19 +38,19 @@ Cookie 的几大特征：
 - 过期时限
 - 4 kb 限制
 
-#### Cookie 在身份认证中的作用
+##### Cookie 在身份认证中的作用
 客户端第一次请求服务器的时候，服务器**通过响应头的形式**，向客户端发送一个身份认证的 Cookie，客户端会自动将 Cookie 保存
 在浏览器中。
 随后，当客户端浏览器每次请求服务器的时候，浏览器会自动将身份认证相关的 Cookie，通过请求头的形式发送给服务器，服务器
 即可严明客户端的身份。
 
-#### 提高身份认证的安全性
+##### 提高身份认证的安全性
 “会员卡” + "刷卡认证“ 
 
-#### Session 的工作原理
+##### Session 的工作原理
 
-### 5.4 在 Express 中使用 Session 认证
-#### **配置** express-session 中间件
+#### 5.4 在 Express 中使用 Session 认证
+##### **配置** express-session 中间件
 express-session 中间件安装成功后，需要通过 app.use()来注册 session 中间件，示例代码如下：
 ```
 var session = require('express-session')
@@ -70,12 +68,12 @@ app.listen(8000, () => {
 })
 ```
 
-### 5.5 JWT(JSON web Token 目前最流行的跨域认证解决方案) 认证机制
+#### 5.5 JWT(JSON web Token 目前最流行的跨域认证解决方案) 认证机制
 注意：
 - 当前端请求后端**不存在跨域问题**的时候，**推荐使用Session**身份认证机制。
 - 当前端需要跨域请求后端接口的时候，不推荐使用 Session 身份认证机制，推荐使用 JWT 认证机制。
 
-#### JWT 的组成部分
+##### JWT 的组成部分
 JWT 通常由三部分组成，分别是Header（头部），Payload（有效荷载），Signature（签名）。
 三者之间使用英文的 "." 分隔，格式如下：
 ```
@@ -87,8 +85,8 @@ Header.Payload.Signature
 Authorization: Bearer <token>
 ```
 
-### 5.6 在 Express 中使用 JWT
-#### 1. 安装两个 JWT 相关的包：
+#### 5.6 在 Express 中使用 JWT
+##### 1. 安装两个 JWT 相关的包：
 ```
 npm install jsonwebtoken express-jwt
 ```
@@ -96,27 +94,27 @@ npm install jsonwebtoken express-jwt
 - jsonwebtoken 用于生成 JWT 字符串
 - express-jwt 用于将 JWT 字符串解析还原成 JSON 对象
 
-#### 2. 导入 JWT 相关的包
+##### 2. 导入 JWT 相关的包
 使用 require（）函数，分别导入 JWT 相关的两个包：
 ```
 const jwt = require('jsonwebtoken')
 const expressJWT = require('express-jwt')
 ```
-#### 3. 定义 secret 密钥
+##### 3. 定义 secret 密钥
 - 当生成 JWT 字符串的时候，需要使用 secret 密钥对用户的信息**进行加密**，最终得到加密好的 JWT 字符串
 - 当把 JWT 字符串解析还原成 JSON 对象的时候，需要使用 secret 密钥**进行解密**
 ```
 const secretKey = 'itheima No1 ^-^'
 ```
-#### 4. 在登录成功后生成 jwt 字符串
+##### 4. 在登录成功后生成 jwt 字符串
 调用jsonwetoken
 
-#### 5. 将JWT字符串还原为JSON对象
+##### 5. 将JWT字符串还原为JSON对象
 ```
 app.use(expressJWT({secret:secretKey}).unless({path:[/^\/api\//]}))
 ```
 
-#### 实例
+##### 实例
 ```
 const epxress = require('express')
 const app = epxress()
@@ -171,7 +169,7 @@ app.listen(8000,()=>{
     console.log('http://127.0.0.1:8000');
 })
 ```
-package.json
+##### package.json
 ```
 {
   "name": "jwt-test",
@@ -192,7 +190,7 @@ package.json
   }
 }
 ```
-Postman
+##### Postman
 ```
 http://127.0.0.1:8000/api/login
 
